--- a/package.json
+++ b/package.json
@@ -32,7 +32,5 @@
     "hexo-wordcount": "^6.0.1",
     "live2d-widget-model-hijiki": "^1.0.5"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
