--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -678,7 +678,7 @@ google_analytics:
   only_pageview: false
 
 # Baidu Analytics
-baidu_analytics: # <app_id>
+baidu_analytics: 9b4a905f8db5cb25273c1ca5921ba35b # <app_id>
 
 # Growingio Analytics
 growingio_analytics: # <project_id>
