--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "hexo deploy",
     "server": "hexo server",
     "toDeploy": "hexo clean && hexo generate &&  hexo deploy",
-    "toRun": "hexo clean && hexo generate &&  hexo server"
+    "toRun": "hexo clean && hexo generate &&  hexo server -p 5000"
   },
   "hexo": {
     "version": "5.3.0"
