--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -203,6 +203,7 @@ links_settings:
 
 links:
   Java技术栈: http://www.hinzzz.cn
+  谢广达: http://www.xieguangda.top
  
 
 # Table of Contents in the Sidebar
